--- a/package.json
+++ b/package.json
@@ -10,30 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
+    "i18next": "^24.2.0",
+    "lucide-react": "^0.460.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^6.28.0",
-    "lucide-react": "^0.460.0",
-    "recharts": "^2.13.3",
-    "zustand": "^5.0.2",
-    "i18next": "^24.2.0",
     "react-i18next": "^15.2.0",
+    "react-router-dom": "^6.28.0",
     "react-webcam": "^7.2.0",
-    "date-fns": "^4.1.0"
+    "recharts": "^2.13.3",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "npm:rolldown-vite@7.2.2",
-    "tailwindcss": "^3.4.17",
     "postcss": "^8.4.49",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^3.4.17",
+    "vite": "npm:rolldown-vite@7.2.2"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.2"
